@@ -18,7 +18,6 @@ package com.ubiqube.etsi.mano.orchestrator;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.jgrapht.ListenableGraph;
 
@@ -51,9 +50,8 @@ public class PreExecutionGraphImpl<U> implements PreExecutionGraph<U> {
 
 	@Override
 	public List<VirtualTask<U>> getPreTasks() {
-		final List<VirtualTask<U>> ret = new ArrayList<>();
-		ret.addAll(g.vertexSet().stream().collect(Collectors.toList()));
-		ret.addAll(r.vertexSet().stream().collect(Collectors.toList()));
+		final List<VirtualTask<U>> ret = new ArrayList<>(g.vertexSet().stream().toList());
+		ret.addAll(r.vertexSet().stream().toList());
 		return ret;
 	}
 
